--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@ L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fil
 //  poly.addTo(layer_cercles_CS);
 });
 
-console.log(Layer_ZI_20C.getLayers());
-console.log(layer_cercles_CS.getLayers()._Layer);
+// console.log(Layer_ZI_20C.getLayers());
+console.log(layer_cercles_CS);
 
 	
 
