--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fil
 
 // console.log(Layer_ZI_20C.getLayers());
 console.log(layer_cercles_CS);
-
+layer_cercles_CS.addTo(map_3);
 	
 
 
