--- a/index.html
+++ b/index.html
@@ -358,15 +358,14 @@ layer_adresses_CS.eachLayer(function(layer) {
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
  console.log(Test);
  console.log(poly);
-L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 0.8}}).addTo(layer_cercles_CS);
+ var cercle_mange = L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 0.8}}).addTo(layer_cercles_CS);
+ cercle_mange.addTo(map_3);
 //  poly.addTo(layer_cercles_CS);
 });
 
 // console.log(Layer_ZI_20C.getLayers());
 console.log(layer_cercles_CS);
 layer_cercles_CS.addTo(map_3);
-	
-
 
 console.log(ZI_20C);
 	 
