--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@ console.log(ZI_20C);
 	 // });
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
-var circleUnion = unify(layer_cercles_CS.getLayers(),'grey');
-circleUnion.addTo(map_3);	 
+// var circleUnion = unify(layer_cercles_CS.getLayers(),'grey');
+// circleUnion.addTo(map_3);	 
 
-console.log(circleUnion.toGeoJSON());
+// console.log(circleUnion.toGeoJSON());
 	 
 //var poly = turf.difference(layer_cercles_CS[0].toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
 // console.log(poly);
