--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@ Test.addTo(map_3);
  var cercle_mange = L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 0.8}}).addTo(layer_cercles_CS);
 //  poly.addTo(layer_cercles_CS);
 cercle_mange.addTo(map_3);
+console.log(Test);	
 console.log(cercle_mange);
 });
 
