--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ console.log(cercle_mange);
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
  var circleUnion = unify(layer_cercles_CS.getLayers(),'grey');
- // circleUnion.addTo(map_3);	 
+ circleUnion.addTo(map_3);	 
 
 // console.log(circleUnion.toGeoJSON());
 	 
