--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ layer_adresses_CS.eachLayer(function(layer) {
  // .addTo(layer_cercles_CS);
 //  poly.addTo(layer_cercles_CS);
 Test.addTo(layer_cercles_CS);
-cercle_mange.addTo(map_3);
+// cercle_mange.addTo(map_3);
 console.log(Test);	
 console.log(cercle_mange);
 });
