--- a/index.html
+++ b/index.html
@@ -354,11 +354,10 @@ ZI_20C.addTo(map_3);
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
- var cercle_mange = L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 0.8}});
- // .addTo(layer_cercles_CS);
+ var cercle_mange = L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 0.8}}).addTo(layer_cercles_CS);
 //  poly.addTo(layer_cercles_CS);
 // Test.addTo(layer_cercles_CS);
-// cercle_mange.addTo(map_3);
+cercle_mange.addTo(map_3);
 console.log(Test);	
 console.log(cercle_mange);
 });
