--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@ console.log(Test);
 console.log(cercle_mange);
 });
 
+console.log(Layer_ZI_20C.getLayers());
+console.log(layer_cercles_CS.getLayers());
+	 
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
  var circleUnion = unify(layer_cercles_CS.getLayers(),'grey');
