--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
  console.log(poly) ;
- var cercle_mange = L.Polygon(poly.getLatLngs(), {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 1.0}}).addTo(layer_cercles_CS);
+ var cercle_mange = L.Polygon(turf.polygon(poly).getLatLngs(), {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 1.0}}).addTo(layer_cercles_CS);
 //  poly.addTo(layer_cercles_CS);
 // Test.addTo(layer_cercles_CS);
 cercle_mange.addTo(map_3);
