--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@ ZI_20C.addTo(map_3);
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
- console.log(poly) ;
 	
  // on doit inverser les coordonnées de poly issue de turf
  var lng_lat_poly = [];
@@ -363,21 +362,14 @@ layer_adresses_CS.eachLayer(function(layer) {
 var lng_lat = [poly.geometry.coordinates[0][i][1], poly.geometry.coordinates[0][i][0]];
 lng_lat_poly.push(lng_lat);
 }
-
  var cercle_mange = new L.Polygon(lng_lat_poly, {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillopacity" : 1.0}}).addTo(layer_cercles_CS);
-cercle_mange.addTo(map_3);
-console.log(Test);	
-console.log(cercle_mange);
 });
 
-console.log(Layer_ZI_20C.getLayers());
-console.log(layer_cercles_CS.getLayers());
 	 
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
- var circleUnion = unify(layer_cercles_CS.getLayers(),'grey');
+ var circleUnion = unify(layer_cercles_CS.getLayers(),'pink');
  circleUnion.addTo(map_3);
-console.log(circleUnion);
 
 // console.log(circleUnion.toGeoJSON());
 	 
