--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ lng_lat_poly.push(lng_lat);
  console.log(circleUnion);
  layer_cercles_CS.clearLayers();
  circleUnion.addTo(layer_cercles_CS);
-
+console.log(layer_cercles_CS);
 	 
 //var poly = turf.difference(layer_cercles_CS[0].toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
 // console.log(poly);
