--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@ var lng_lat = [poly.geometry.coordinates[0][i][1], poly.geometry.coordinates[0][
 lng_lat_poly.push(lng_lat);
 }
  var cercle_mange = new L.Polygon(lng_lat_poly, {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillcolor" : 'purple', "fillopacity" : 1.0}}).addTo(layer_cercles_CS);
+ console.log(layer_cercles_CS);
 });
 
 	 
