--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ function Filtre_influence_20C(feature) {
   if ((feature.properties.C_IR >= 751207906 && feature.properties.C_IR <= 751207910)) return true
 }
 var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange')
-// ZI_20C.addTo(map_3);
+ZI_20C.addTo(map_3);
 	 
     PS.forEach(
     function(element) {
