--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@ function Filtre_influence_20C(feature) {
 }
 var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange')
 ZI_20C.addTo(map_3);
+map_3.removeLayer(Layer_ZI_20C);
+	 
 console.log(ZI_20C);
 	 
     PS.forEach(
