--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ function unify(polyList,color) {
       unionTemp = turf.union(unionTemp, polyList[i].toGeoJSON());
     }
   }
-  return L.geoJson(unionTemp, {style: {color: color,"weight": 5.0, "opacity" : 0.8, "fill" : true, "fillcolor" : 'purple' , "fillopacity" : 0.8}});
+  return L.geoJson(unionTemp, {style: {color: color,"weight": 5.0, "opacity" : 0.8, "fill" : true, "fillcolor" : 'orange' , "fillopacity" : 0.8}});
 }
 
 
