--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ ZI_20C.addTo(Layer_ZI_20C);
 console.log(ZI_20C);
 // map_3.removeLayer(Layer_ZI_20C);
 	 
-console.log(ZI_20C);
+console.log(Layer_ZI_20C);
 	 
     PS.forEach(
     function(element) {
