--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ lng_lat_poly.push(lng_lat);
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
  var circleUnion = unify(layer_cercles_CS.getLayers(),'pink');
- circleUnion.addTo(map_3);
+ // circleUnion.addTo(map_3);
  console.log(circleUnion);
 console.log(layer_cercles_CS);
  layer_cercles_CS.clearLayers();
