--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ console.log(ZI_20C);
 // map_3.removeLayer(Layer_ZI_20C);
 	 
 console.log(Layer_ZI_20C);
+console.log(layer_cercles_CS);
 	 
     PS.forEach(
     function(element) {
