--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ function unify(polyList,color) {
 
     var layer_cercles_CS = L.layerGroup().addTo(map_3);
     var radius = 750
-    var opts = {parts: 144, fillcolor : 'brown', fillopacity : 0.9};
+    var opts = {parts: 144, fill : 'blue' , fillcolor : 'blue', fillopacity : 0.9};
 
 var Layer_ZI_20C = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'orange', "fillopacity" : 0.5}}).addTo(map_3);
 	 
