--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ console.log(layer_cercles_CS);
  // circleUnion.addTo(map_3);
  console.log(circleUnion);
 console.log(layer_cercles_CS);
- layer_cercles_CS.clearLayers();
+ // layer_cercles_CS.clearLayers();
 console.log(layer_cercles_CS);
  circleUnion.addTo(layer_cercles_CS);
 
