--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ layer_adresses_CS.eachLayer(function(layer) {
 var lng_lat = [poly.geometry.coordinates[0][i][1], poly.geometry.coordinates[0][i][0]];
 lng_lat_poly.push(lng_lat);
 }
- var cercle_mange = new L.Polygon(lng_lat_poly, {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillcolor" : 'purple', "fillopacity" : 1.0}});
+ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {"weight": 5.0, "color" : 'pink',  "opacity" : 0.8, "fill" : true, "fillcolor" : 'purple', "fillopacity" : 1.0}}).addTo(map_3);
 console.log(cercle_mange); 
 console.log(layer_cercles_CS);
 });
