--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ console.log(layer_cercles_CS);
 	 
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
- var circleUnion = unify(layer_cercles_CS.getLayers(),'black');
+ var circleUnion = unify(layer_cercles_CS.getLayers(),'purple');
  // circleUnion.addTo(map_3);
  console.log(circleUnion);
 console.log(layer_cercles_CS);
