--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ coords[1] = inside.features[i].geometry.coordinates[0];
 L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 };
 
- var Layer_IRIS = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
+ var Layer_IRIS = L.geoJson(iris, { style:  {color: 'black', weight: 0.5, opacity : 0.7, fill : true, fillcolor : 'transparent', fillopacity : 0.0}}).bindTooltip(function (layer) {
     return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
  }, {permanent: false, opacity: 0.8}  //then add your options
  ).addTo(map_3);
