--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 <h3><a name="ex3" class="anchor" ><span class="octicon octicon-link"></span>IRIS et zones d'influence des centres sociaux parisiens</a></h3>
 
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
-    - on exclut les adresses relevant de la zone de première influence de la 20ème Chaise (liste d'IRIS)  <br>
+    - on exclut les adresses relevant de la zone de première influence de la 20ème Chaise (liste d'IRIS) (zone en fond bleu)  <br>
     - les zones d'influence des centres sociaux parisiens sont définies par un rayon de 750 mètres <br>			
     - recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon <br>
     - la réunion des cercles d'influence appraît en mauve ainsi que les points correspondants <br>
@@ -418,7 +418,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 
 
  document.getElementById("comment_3").innerHTML = inside.features.length +
-	 ' sont dans une zone d\'influence d\'un autre centre social (en violet).' + '<br/>' +
+	 ' sont dans une zone d\'influence d\'un autre centre social.' + '<br/>' +
 	 (layer_adresses.getLayers().length -inside.features.length) + ' n\'y sont pas.'
    
   
