--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 
 <p> - récupération des polygones définissant les IRIS via une source de type GeoJSON <br>
     - on exclut les adresses relevant de la zone de première influence de la 20ème Chaise (liste d'IRIS) (zone en fond bleu)  <br>
-    - les zones d'influence des centres sociaux parisiens sont définies par un rayon de 750 mètres <br>			
+    - les zones d'influence des centres sociaux parisiens sont définies par un rayon de 750 mètres <br>
+    - la réunion des cercles d'influence apparaît en mauve ainsi que les points correspondants <br>
     - recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon <br>
-    - la réunion des cercles d'influence appraît en mauve ainsi que les points correspondants <br>
     - survoler les zones d'IRIS pour voir apparaître le numéro et le nom de l'IRIS
 </p>
 
