--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
   <script>
  function exemple1() {
     var map_1 = L.map('map_1').setView([48.864891,2.389828], 15);
-    var tableau_sortie = data;
-  
+    var tableau_sortie_int = data;
+    
+var tableau_sortie = tableau_sortie_int.filter(function (element) {
+  return element.asl == 0 ;
+});	 
+
     tableau_sortie.map( adresse => {
     let properties = {
    "lng": adresse.lng,
