--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <p>
   <div id="map_1" style="width: 840px; height: 560px"></div>
   <script>
- function exemple1() {
-    var map_1 = L.map('map_1').setView([48.864891,2.389828], 15);
-    var tableau_sortie_int = data;
+ 
+ // on gère le filtrage des données en amont de tous les exemples
+  var tableau_sortie_int = data;
     
 var tableau_sortie = tableau_sortie_int.filter(function (element) {
   return element.asl == 0
@@ -70,7 +70,11 @@ var tableau_sortie = tableau_sortie_int.filter(function (element) {
 	|| element.benevole == 0
 	|| element.benevole == 1
 	 ;
-});	 
+});
+	  
+ function exemple1() {
+    var map_1 = L.map('map_1').setView([48.864891,2.389828], 15);
+  	 
 
     tableau_sortie.map( adresse => {
     let properties = {
