--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
   var tableau_sortie_int = data;
     
 var tableau_sortie = tableau_sortie_int.filter(function (element) {
-  return //element.asl == 0
-	// ||
+  return element.asl == 0
+	||
 	  element.asl == 1
 	||
 	  element.benevole == 0
-	// ||
-	// element.benevole == 1
+	||
+	  element.benevole == 1
 	 ;
 });
 	  
