--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
     {
         exemple1();
 	exemple2();
-	exemple3();
+	// exemple3();
     }
     
  </script>
