--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
     window.onload = function()
     {
         exemple1();
-	exemple2();
+	// exemple2();
 	// exemple3();
     }
     
