--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ var tableau_sortie = tableau_sortie_int.filter(function (element) {
 	  element.benevole == 0
 	 ;
 });
+console.log(tableau_sortie.length);
 	  
  function exemple1() {
     var map_1 = L.map('map_1').setView([48.864891,2.389828], 15);
