--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var tableau_sortie = tableau_sortie_int.filter(function (element) {
   return 
 	  element.asl == 1
 	&&
-	  element.benevole == 0
+	  element.bene == 0
 	 ;
 });
 console.log(tableau_sortie.length);
