--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
     
 var tableau_sortie = tableau_sortie_int.filter(function (element) {
   return 
+	  element.asl == 0
+	||
 	  element.asl == 1
-	&&
+	||
 	  element.bene == 0
+	||
+	  element.bene == 1
 	 ;
 });
 console.log(tableau_sortie.length);
