--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
  
  // on gère le filtrage des données en amont de tous les exemples
   var tableau_sortie_int = data;
-    
+console.log(tableau_sortie_int.length);
+	  
 var tableau_sortie = tableau_sortie_int.filter(function (element) {
   return 
 	  element.asl == 0
