--- a/index.html
+++ b/index.html
@@ -67,13 +67,7 @@ console.log(tableau_sortie_int.length);
 	  
 var tableau_sortie = tableau_sortie_int.filter(function (element) {
   return 
-	  element.asl == 0
-	||
-	  element.asl == 1
-	||
-	  element.bene == 0
-	||
-	  element.bene == 1
+	 true
 	 ;
 });
 console.log(tableau_sortie.length);
