--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
   var tableau_sortie_int = data;
 console.log(tableau_sortie_int.length);
 	  
-var tableau_sortie = tableau_sortie_int.filter(function (element) {
-  return 
-	 true
-	 ;
-});
+var tableau_sortie = tableau_sortie_int;
 console.log(tableau_sortie.length);
 	  
  function exemple1() {
