--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 console.log(tableau_sortie_int.length);
 	  
 var tableau_sortie = tableau_sortie_int.filter(function(element) {
-    return (element.asl == 1) || (element.asl == 0);
+    return (element.asl == 1) && (element.bene == 0);
 });
 console.log(tableau_sortie.length);
 	  
