--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 console.log(tableau_sortie_int.length);
 	  
 var tableau_sortie = tableau_sortie_int.filter(function(element) {
-    return (element.nb_tot_act >= 5);
+    return (element.nb_diff_act >= 2);
 });
 console.log(tableau_sortie.length);
 	  
