--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 	 ' sont dans la zone d\'influence de la 20ème Chaise.' + '<br/>' +
 	 inside.features.length +
 	 ' sont dans une zone d\'influence d\'un autre centre social.' + '<br/>' +
-	 (layer_adresses.getLayers().length - inside_20C.features.length - inside.features.length) + ' sont hors zones d.'
+	 (layer_adresses.getLayers().length - inside_20C.features.length - inside.features.length) + ' sont hors zones d\'influence.'
    
   
     // var markers_adresses_CS = {'markers': layer_adresses_CS};
