--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 var tableau_sortie_int = data;
 	  
 var tableau_sortie = tableau_sortie_int.filter(function(element) {
-    return (element.nb_diff_act >= 2);
+    return (element.nb_tot_act >= 5);
 });
 </script>
 
