--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 var tableau_sortie_int = data;
 	  
 var tableau_sortie = tableau_sortie_int.filter(function(element) {
-    return (element.nb_tot_act >= 5);
+    return (element.asl >= 0 && element.bene == 0);
 });
 </script>
 
