--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
 	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
 
+<p>
+< form name="e">
+
+Choix 1 <input type="checkbox" name="checkbox1" value="checkbox">
+Choix 2 <input type="checkbox" name="checkbox2" value="checkbox">
+
+<input type="button" name="bout" value="Tester" onClick="test()">
+
+</form>
+
+function test() {
+  var m=0;
+  for (i=1;i<2;i++) {
+  if (eval("document.forms.e.checkbox"+i+".checked == true")){
+  m=m+1;
+  }
+  }
+  if (m>0) {
+    alert("Vous avez fait " + m + " filtres");
+  }else {
+    alert("Vous n'avez fait aucun filtre");
+  }
+}
+
 <script>
 // on gère le filtrage des données en amont de tous les exemples
 var tableau_sortie_int = data;
