--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 function test() {
   var m=0;
   for (i=1;i<2;i++) {
-  if (eval("document.forms.e.checkbox"+i+".checked == true")){
+  if (eval("document.forms.asl.checkbox"+i+".checked == true")){
   m=m+1;
   }
   }
