--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
 
 <div>
-<input type="checkbox" id ="asl1" name="asl" value="asl1"/>
+<input type="radio" id ="asl1" name="asl" value="asl1"/>
 <label for="asl1">inscrits uniquement aux ASL</label>
 </div>
 <div>
-<input type="checkbox" id ="asl2" name="asl" value="asl2"/>
+<input type="radio" id ="asl2" name="asl" value="asl2"/>
 <label for="asl2">pas de filtre ASL</label>
 </div>
 <div>	
@@ -72,13 +72,11 @@ function test() {
   var m=0;
   for (i=1;i<2;i++) {
   if (eval("document.forms.filtre.asl"+i+".checked == true")){
-  m=m+1;
+  m=i;
   }
   }
-  if (m>0) {
-    alert("Vous avez fait " + m + " filtres");
-  }else {
-    alert("Vous n'avez fait aucun filtre");
+  {
+    alert("Vous avez sélectionné le filtre " + m );
   }
 }
 </script>
