--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
 
 <div>
-<input type="radio" id ="asl1" name="asl" value="asl1"/>
-<label for="asl1">inscrits uniquement aux ASL</label>
+<input type="radio" id ="asl1" name="asl" value="asl1"/ checked>
+<label for="asl1">pas de filtre ASL</label>
 </div>
 <div>
 <input type="radio" id ="asl2" name="asl" value="asl2"/>
-<label for="asl2">pas de filtre ASL</label>
+<label for="asl2">inscrits uniquement aux ASL</label>
 </div>
 <div>	
 <input type="button" name="bout" value="Générer l'analyse" onClick="test()"/>
@@ -70,7 +70,7 @@
 <script>
 function test() {
   var m=0;
-  for (i=1;i<2;i++) {
+  for (i=1;i<=2;i++) {
   if (eval("document.forms.filtre.asl"+i+".checked == true")){
   m=i;
   }
