--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 var lancer = false ;
 function test() {
   lancer = true ;
+  window.location.reload();
   var m=0;
   for (i=1;i<=2;i++) {
   if (eval("document.forms.filtre.asl"+i+".checked == true")){
