--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ ZI_20C.addTo(Layer_ZI_20C);
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
-console.log(poly.geometry);
+console.log(poly.geometry.coordinates.length);
  // on doit inverser les coordonnées de poly issue de turf
  var lng_lat_poly = [];
  for (i=0 ; i < poly.geometry.coordinates[0].length ; i++)
