--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ for (i=0 ; i < poly.geometry.coordinates.length ; i++)
  for (j=0 ; j < poly.geometry.coordinates[i].length ; j++)
  {
 var lng_lat = [poly.geometry.coordinates[i][j][1], poly.geometry.coordinates[i][j][0]];
-lng_lat_poly[i].push(lng_lat);
+lng_lat_poly[i][j] = lng_lat;
 }
 }
  var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
