--- a/index.html
+++ b/index.html
@@ -403,16 +403,16 @@ layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
 // on doit gérer le cas où la surface différence est un polygone à trou(s) !!
-var lng_lat_poly = [][];
+var lng_lat_poly = [];
 for (i=0 ; i < poly.geometry.coordinates.length ; i++)
-{
+{var lng_lat_tmp = [];
  // on doit inverser les coordonnées de poly issue de turf
  for (j=0 ; j < poly.geometry.coordinates[i].length ; j++)
  {
 var lng_lat = [poly.geometry.coordinates[i][j][1], poly.geometry.coordinates[i][j][0]];
-console.log(lng_lat);
-lng_lat_poly[i][j] = lng_lat;
+lng_lat_tmp.push(lng_lat);
 }
+lng_lat_poly[i] = lng_lat_tmp;
 }
  var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
 cercle_mange.addTo(layer_cercles_CS) ;
