--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   
     <script>
     window.onload = function()
-    { if (lancer != true)
+    { // if (lancer != true)
     {
         exemple1();
 	exemple2();
