--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
     </div>
   
     <script>
-    window.onload = function()
+  //  window.onload = function()
     { // if (lancer != true)
     {
         exemple1();
