--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	- Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
 
-<!--
+
 <form id="filtre">
 <fieldset>
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
@@ -69,22 +69,22 @@
 </form>
 
 <script>
-var lancer = false ;
 function test() {
-  lancer = true ;
-  window.location.reload();
-  var m=0;
-  for (i=1;i<=2;i++) {
-  if (eval("document.forms.filtre.asl"+i+".checked == true")){
-  m=i;
-  }
-  }
-  {
-    alert("Vous avez sélectionné le filtre " + m );
+var btn_click = true ;
+  if (eval("document.forms.filtre.asl"+1+".checked == true")){
+    
+    alert("Vous avez sélectionné le public ASL");
+    var tableau_sortie = data.filter(function(element) {
+    return (element.asl >= 0);
+      exemple1();
+      exemple2();
+      exemple3();
+});
+      
+   
   }
 }
 </script>
--->
 
 <script>
 // on gère le filtrage des données en amont de tous les exemples
@@ -504,7 +504,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   
     <script>
   window.onload = function()
-    { // if (lancer != true)
+    { if (btn_click != true)
     {
         exemple1();
 	exemple2();
