--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@ btn_click = true ;
     
     alert("Vous avez sélectionné le public ASL");
     tableau_sortie = data.filter(function(element) {
-    return (element.asl >= 1);}
+    return element.asl >= 1;})
       exemple1();
       exemple2();
       exemple3();
-);
+  }
+};
       
    
   }
