--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ var tableau_sortie = [] ;
 	
 function test() {
 btn_click = true ;
+window.reload();
   if (eval("document.forms.filtre.asl"+1+".checked == true")){
     
     alert("Vous avez sélectionné le public ASL");
