--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ window.location.reload();
 </script>
 
 <script>
+console.log(btn_click);
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
 if (btn_click == false) {  
 var tableau_sortie = data.filter(function(element) {
