--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
 <script>
 var btn_click ;
-btn_click = false ;
+localStorage.setItem("btn_click", false);
 var tableau_sortie = [] ;
 	
 function test() {
-btn_click = true ;
+localStorage.setItem("btn_click", true) ;
 window.location.reload();
   if (eval("document.forms.filtre.asl"+1+".checked == true")){
     
