--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   
     <script>
   window.onload = function()
-    { if ((JSON.parse(localStorage.getItem("btn_click")) === false))
+    { console.log(localStorage.getItem("btn_click"));
+	  if ((JSON.parse(localStorage.getItem("btn_click")) === false))
     {
         exemple1();
 	exemple2();
