--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <script>
 var btn_click ;
-localStorage.setItem("btn_click", false);
+// localStorage.setItem("btn_click", false);
 var tableau_sortie = [] ;
 	
 function test() {
